<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/Main"
    android:layout_height="match_parent"
    tools:context=".OfActivity">

    <ImageView
        android:id="@+id/ivOf"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:srcCompat="@drawable/menneu" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pick_category"
        android:textColor="@color/White"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/writing"
                android:text="@string/meals"
                android:textColor="@color/DarkMain"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Main"
                app:srcCompat="@drawable/food" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMarkets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/writing"
                android:text="@string/groceries"
                android:textColor="@color/DarkMain"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibMarkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Main"
                app:srcCompat="@drawable/market" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTransport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/writing"
                android:text="@string/transport"
                android:textColor="@color/DarkMain"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Main"
                app:srcCompat="@drawable/transportt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"

                android:fontFamily="@font/writing"
                android:text="@string/goods"
                android:textColor="@color/DarkMain"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ibGoods"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/Main"
                app:srcCompat="@drawable/goods" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>